--- a/front-office/src/index.css
+++ b/front-office/src/index.css
@@ -14,3 +14,10 @@ body {
 code {
       font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+h1,
+h2,
+h3,
+h4 {
+      font-family: 'poppins';
+}
