--- a/back-office/templates/newsletter/newsletter_article.html.twig
+++ b/back-office/templates/newsletter/newsletter_article.html.twig
@@ -106,7 +106,7 @@
         </div>
 
         <div class="article-header">
-            <h2>{{ article.title }}</h2>
+            <h2>{{ article.title.fr }}</h2>
         </div>
 
         <div class="content">
