etape 3 presque termine à 96%

--- a/back-office/templates/newsletter/newsletter_article.html.twig
+++ b/back-office/templates/newsletter/newsletter_article.html.twig
@@ -113,8 +113,8 @@
             {% if article.imagePath %}
                 <img src="{{ article.imagePath }}" alt="Illustration de l'article">
             {% endif %}
-            <p><strong>{{ article.hook }}</strong></p>
-            <p>{{ article.content[:120] ~ '...' }}</p>
+            <p><strong>{{ article.hook.fr }}</strong></p>
+            <p>{{ article.content.fr[:120] ~ '...' }}</p>
 
             <a class="button" href="https://fmed.ml/article/{{ article.id }}">📖 Lire l'article complet</a>
 
